# pra-pnl-tracker

./: .env.example  .gitignore  README.md  cron_update.py  pra_pnl.db  push_bets.sh  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/models/: database.py
app/services/: db_sync.py  live_tracker.py  pipeline_runner.py  result_updater.py  (+1 more)
data/: goldilocks_v2_2025-12-03.csv  goldilocks_v2_2025-12-07.csv  goldilocks_v2_2025-12-08.csv  goldilocks_v2_2025-12-09.csv  goldilocks_v2_2025-12-10.csv  goldilocks_v2_2025-12-11.csv  goldilocks_v2_2025-12-13.csv  goldilocks_v2_2025-12-14.csv  goldilocks_v2_2025-12-15.csv  goldilocks_v2_2025-12-16.csv  goldilocks_v2_2025-12-17.csv  goldilocks_v2_2025-12-18.csv  goldilocks_v2_2025-12-19.csv  goldilocks_v2_2025-12-20.csv  goldilocks_v2_2025-12-21.csv  goldilocks_v2_2025-12-22.csv  goldilocks_v2_2025-12-23.csv  goldilocks_v2_2025-12-25.csv  goldilocks_v3_2025-12-10.csv  goldilocks_v3_2025-12-11.csv  goldilocks_v3_2025-12-13.csv  goldilocks_v3_2025-12-14.csv  goldilocks_v3_2025-12-15.csv  goldilocks_v3_2025-12-26.csv  goldilocks_v3_2025-12-27.csv  goldilocks_v3_2025-12-28.csv  goldilocks_v3_2025-12-29.csv  goldilocks_v4_2026-01-01.csv  goldilocks_v4_2026-01-02.csv  goldilocks_v4_2026-01-03.csv  goldilocks_v4_2026-01-04.csv  goldilocks_v4_2026-01-05.csv  goldilocks_v4_2026-01-06.csv  goldilocks_v4_2026-01-07.csv  goldilocks_v4_2026-01-08.csv
scripts/: daily_pipeline.sh  import_from_nba_pra.py  push_to_production.py
tests/: conftest.py
(+21 files in other folders)
