[project]
name = "pra-pnl-tracker"
version = "0.1.0"
description = "PnL dashboard for Goldilocks V2 NBA betting model"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.25.0",
    "nba-api>=1.4.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "app/*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
